--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
       "preload.js",
       "renderer.js",
       "index.html",
-      "package.json"
+      "package.json",
+      "assets/**/*"
     ],
     "directories": {
       "output": "dist"
